<?xml version="1.0"?>
<package format="2">
  <name>bruinwalker_2dnav</name>
  <version>0.0.0</version>
  <description>The bruinwalker_2dnav package</description>

  <maintainer email="caev@todo.todo">caev</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bruinwalker_odom</depend>
  <depend>bruinwalker_sensors</depend>
  <depend>move_base</depend>

</package>
