<?xml version="1.0"?>
<package format="2">
  <name>bruinwalker_odom</name>
  <version>0.0.0</version>
  <description>The bruinwalker_odom package</description>

  <maintainer email="bsquicciarini@g.ucla.edu">Brad Squicciarini</maintainer>

  <license>BSD</license>

  <depend>nav_msgs</depend>
  <depend>tf</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
