<?xml version="1.0"?>
<package format="2">
  <name>trog_2dnav</name>
  <version>0.0.0</version>
  <description>The trog_2dnav package</description>

  <maintainer email="bsquicciarini@ucla.edu">Brad Squicciarini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>trog_sensors</depend>
  <depend>move_base</depend>

</package>
