<?xml version="1.0"?>
<package format="2">
  <name>trog_mapping</name>
  <version>0.0.0</version>
  <description>The trog_mapping package</description>

  <maintainer email="bsquicciarini@ucla.edu">Brad Squicciarini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gmapping</depend>
</package>
