<?xml version="1.0"?>
<package format="2">
  <name>trog_sensors</name>
  <version>0.0.0</version>
  <description>The trog_sensors package</description>

  <maintainer email="bsquicciarini@ucla.edu">Brad Squicciarini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_laserscan</depend>
  <depend>velodyne_msgs</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>nmea_navsat_driver</depend>

</package>
