<?xml version="2.0"?>
<package>
  <name>roboteq_driver</name>
  <version>0.2.0</version>
  <description>The roboteq_driver package</description>

  <maintainer email="bsquicciarini@ucla.edu">Brad Squicciarini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roboteq_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <run_depend>roboteq_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>serial</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
